Implement Customer JPA Operations