@@ -7,10 +7,13 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.context.annotation.Primary;
 import org.springframework.stereotype.Service;
+import org.springframework.util.StringUtils;
 
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
+import java.util.concurrent.atomic.AtomicReference;
+import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -23,35 +26,60 @@ public class CustomerServiceJPA implements CustomerService {
 
   @Override
   public Optional<CustomerDTO> getCustomerById(UUID uuid) {
-    return Optional.ofNullable(customerMapper.customerToCustomerDto(customerRepository.findById(uuid)
-      .orElse(null)));
+    return Optional.ofNullable(customerMapper
+      .customerToCustomerDto(customerRepository.findById(uuid).orElse(null)));
   }
 
   @Override
   public List<CustomerDTO> getAllCustomers() {
-    return customerRepository.findAll()
-      .stream()
+    return customerRepository.findAll().stream()
       .map(customerMapper::customerToCustomerDto)
-      .toList();
+      .collect(Collectors.toList());
   }
 
   @Override
-  public CustomerDTO saveNewCustomer(CustomerDTO customerDTO) {
-    return null;
+  public CustomerDTO saveNewCustomer(CustomerDTO customer) {
+    return customerMapper.customerToCustomerDto(customerRepository
+      .save(customerMapper.customerDtoToCustomer(customer)));
   }
 
   @Override
-  public void updateCustomerById(UUID customerId, CustomerDTO customerDTO) {
-
+  public Optional<CustomerDTO> updateCustomerById(UUID customerId, CustomerDTO customer) {
+    AtomicReference<Optional<CustomerDTO>> atomicReference = new AtomicReference<>();
+    customerRepository.findById(customerId).ifPresentOrElse(foundCustomer -> {
+      foundCustomer.setName(customer.getName());
+      atomicReference.set(Optional.of(customerMapper
+        .customerToCustomerDto(customerRepository.save(foundCustomer))));
+    }, () -> {
+      atomicReference.set(Optional.empty());
+    });
+    return atomicReference.get();
   }
 
   @Override
-  public void deleteCustomerById(UUID customerId) {
-
+  public Boolean deleteCustomerById(UUID customerId) {
+    if (customerRepository.existsById(customerId)) {
+      customerRepository.deleteById(customerId);
+      return true;
+    }
+    return false;
   }
 
   @Override
-  public void patchCustomerById(UUID customerId, CustomerDTO customerDTO) {
+  public Optional<CustomerDTO> patchCustomerById(UUID customerId, CustomerDTO customer) {
+    AtomicReference<Optional<CustomerDTO>> atomicReference = new AtomicReference<>();
 
+    customerRepository.findById(customerId).ifPresentOrElse(foundCustomer -> {
+      if (StringUtils.hasText(customer.getName())) {
+        foundCustomer.setName(customer.getName());
+      }
+      atomicReference.set(Optional.of(customerMapper
+        .customerToCustomerDto(customerRepository.save(foundCustomer))));
+    }, () -> {
+      atomicReference.set(Optional.empty());
+    });
+
+    return atomicReference.get();
   }
+
 }
